WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155911
bmalloc: fix an ASSERT on iOS
https://bugs.webkit.org/show_bug.cgi?id=155911
Summary
bmalloc: fix an ASSERT on iOS
Geoffrey Garen
Reported
2016-03-25 17:37:35 PDT
bmalloc: fix an ASSERT on iOS
Attachments
Patch
(1.15 KB, patch)
2016-03-25 17:38 PDT
,
Geoffrey Garen
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-03-25 17:38:57 PDT
Created
attachment 274960
[details]
Patch
Geoffrey Garen
Comment 2
2016-03-25 17:50:48 PDT
Committed
r198704
: <
http://trac.webkit.org/changeset/198704
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug