bmalloc: fix an ASSERT on iOS https://bugs.webkit.org/show_bug.cgi?id=155911

Reviewed by Gavin Barraclough.

* bmalloc/VMAllocate.h:
(bmalloc::vmValidatePhysical): Call through to vmValidatePhysical because
the vmValidate function validates virtual sizes rather than physical
sizes.


Canonical link: https://commits.webkit.org/174010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198704 268f45cc-cd09-0410-ab3c-d52691b4dbfc